--- a/style.css
+++ b/style.css
@@ -31,6 +31,11 @@ li {
 
 .flex-1 {
     flex: 1;
+    display: flex;
+}
+
+.container {
+    padding: 50px 0; 
 }
 
 .row {
@@ -41,6 +46,14 @@ li {
 
 .text--purple {
     color: #6030b1;
+}
+
+section:nth-child(even) {
+    background-color: #f8f8f8; 
+}
+
+.section__title {
+    margin-bottom: 20px;
 }
 
 /* NAVIGATION */
@@ -149,4 +162,35 @@ nav {
 
 .about-me__img {
     width: 100%;
+}
+
+/* TECH STACK */
+
+.language__img {
+    width: 100%;
+    max-width: 100px;
+    transition: all 300ms;
+}
+
+.language__img:hover {
+    filter: brightness(80%);
+    opacity: 0.86;
+    transform: scale(0.9);
+}
+
+.language {
+    width: 25%
+}
+
+.language__img--wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 25px 16px; 
+}
+
+.language__list {
+    display: flex; 
+    width: 100%;
+    flex-wrap: wrap; 
 }
